--- a/Themes/GGO_Kirito/GGO_Kirito.theme.css
+++ b/Themes/GGO_Kirito/GGO_Kirito.theme.css
@@ -10,7 +10,7 @@
 @import url('https://raw.githack.com/VaporousCreeper/BetterDiscord-ThemesAndPlugins/master/Themes/GGO_Kirito/core.css');
 
 :root{
-    --background: url('https://images.alphacoders.com/632/632525.png');
+    --background: url('https://cdn.discordapp.com/attachments/865788644202643496/1178497703689343036/image.png?ex=65765c83&is=6563e783&hm=682bc182f8ea415d491b6ad5437377219ba700ff28f7061de3ddc433c1808204&');
     --activetext-colour: white;
 
     --primary1-colour: red;
